crates/mockiato-compiletest/tests/ui/trait_method_with_reference_to_generic_type.stderr
error: References to generic types are not supported
  --> $DIR/trait_method_with_reference_to_generic_type.rs:15:45
   |
15 |     fn reference_to_slice_of_t(&self, name: &[T]) -> String;
   |                                             ^
   |
note: Required for mockable traits
  --> $DIR/trait_method_with_reference_to_generic_type.rs:8:1
   |
8  | #[mockable]
   | ^^^^^^^^^^^

error: References to generic types are not supported
  --> $DIR/trait_method_with_reference_to_generic_type.rs:17:60
   |
17 |     fn container_type_with_reference_to_u(&self, name: Vec<&U>) -> String;
   |                                                            ^
   |
note: Required for mockable traits
  --> $DIR/trait_method_with_reference_to_generic_type.rs:8:1
   |
8  | #[mockable]
   | ^^^^^^^^^^^

error: References to generic types are not supported
  --> $DIR/trait_method_with_reference_to_generic_type.rs:19:50
   |
19 |     fn reference_to_associated_type(&self, name: &V::Output) -> String;
   |                                                  ^
   |
note: Required for mockable traits
  --> $DIR/trait_method_with_reference_to_generic_type.rs:8:1
   |
8  | #[mockable]
   | ^^^^^^^^^^^

error: References to generic types are not supported
  --> $DIR/trait_method_with_reference_to_generic_type.rs:21:43
   |
21 |     fn reference_in_return_type(&self) -> &V;
   |                                           ^
   |
note: Required for mockable traits
  --> $DIR/trait_method_with_reference_to_generic_type.rs:8:1
   |
8  | #[mockable]
   | ^^^^^^^^^^^
